@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="1.0.1" name="ALPHA Player" provider-name="lambda">
+<addon id="plugin.video.alphatv.gr" version="1.0.2" name="ALPHA Player" provider-name="lambda">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.lamlib" version="1.0.0" />
